@@ -5,6 +5,11 @@ Changelog
 0.2.15 (unreleased)
 ===================
 
+- Update Package component so it ignores installed packages when installing.
+  This way, we actually install setuptools even when distribute is installed.
+  (Otherwise it's a no-op since distribute tells pip that setuptools is
+  already satisfied).
+
 - Add 'assert_cmd' API to support simpler assertions for verify when needing to
   check the result of an external command.
 
